# pghumor-clasificahumor

./: Dockerfile  Dockerfile.prod  Pipfile  README.md  README:md  config.php  docker-cloud.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.testing.yml  docker-compose.yml  docker-stack.yml  estilo.css  index.php  load_test.sh  logic.js  obtenerChisteNuevo.php  obtenerTresChistes.php  procesarVoto.php  pyproject.toml  schema.sql  uwsgi.conf  uwsgi.ini
app/: app.py  database.py  main.py
app/static/: estilo.css  index.html  logic.js
app/static/js/: main.js
clasificahumor/: __main__.py  database.py  main.py
clasificahumor/static/: index.html  noconsent.html  survey.html  thankyou.html  votes.html
clasificahumor/templates/: stats.html
db/: Dockerfile  mysql-charset.cnf
extraction/: agreement.py  download_from_accounts.py  download_hose.py  filter.py  persist.py  py2_download_output_redownload.py  update_tweets_text.py  util.py
nbproject/: project.xml
src/: config.php  index.html  logic.js  obtenerChisteNuevo.php  obtenerTresChistes.php  procesarVoto.php
web/: Dockerfile  Dockerfile.prod  load_test.sh  prestart.sh  pyproject.toml  uwsgi.ini
web/analysis/: analyses.sql  corpus_to_csv.sql
web/clasificahumor/: __main__.py
web/extraction/: dump-tweets-without-votes.sql  lower_weight_non_humorous_tweets.sql
web/src/analysis/: agreement.py
web/src/clasificahumor/static/css/: main.css  votes.css
web/src/clasificahumor/templates/: stats.html
web/src/extraction/: argparse_with_defaults.py  merge_text_duplicates.sql
(+13 files in other folders)
