[project]
name = "clasificahumor"
version = "0.1.0.dev0"
description = "Website to crowd-annotate tweets for Humor Research."
authors = [
    { name = "Santiago Castro", email = "sacastro@fing.edu.uy" },
]
requires-python = ">=3.12"
dependencies = [
    "flask<4",
    "sentry-sdk[flask]<3",
    "sqlalchemy[mysql]<3",
]

[project.urls]
homepage = "https://www.clasificahumor.com/"
repository = "https://github.com/pln-fing-udelar/pghumor-clasificahumor"

[dependency-groups]
dev = [
    "krippendorff<1",
    "mycli<2",
    "mysqlclient<3",
    "pandas<3",
    "tweepy<5",
    "tqdm<5",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "clasificahumor"
module-root = ""

[tool.ruff]
include = ["pyproject.toml", "analysis/**/*.py", "clasificahumor/**/*.py", "extraction/**/*.py"]
line-length = 120

[tool.ruff.lint]
ignore = ["N803", "N806", "N812"]  # Allow uppercase in variable names, arg names, and import aliases. E.g., `X`.
select = ["B", "C", "C90", "E", "F", "I", "N", "RUF", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]  # Allow: `from X import *`.

[tool.ty.src]
include = ["pyproject.toml", "analysis/**/*.py", "clasificahumor/**/*.py", "extraction/**/*.py"]

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.xml]
output = ".tox/test-reports/coverage.xml"

[tool.coverage.html]
directory = ".tox/test-reports/htmlcov"
